ola-parser/src/testdata/syntaxTests/immutable/external_function_pointer.sol
contract C {
    fn() external immutable f;
}
// ----
// TypeError 3366: (17-48): Immutable variables of external fn type are not yet supported.
